add clients and separate endpoints
